Remove private API key

--- a/Data Preprocessing/Google Maps/GoogleStatus.ipynb
+++ b/Data Preprocessing/Google Maps/GoogleStatus.ipynb
@@ -27,7 +27,7 @@
     "import time\n",
     "\n",
     "\n",
-    "API_KEY = \"AIzaSyDI3JzygmgqkutG4VFjbzHSXvHP2-DfjwM\"\n",
+    "API_KEY = \"XXX\"\n",
     "gmaps = googlemaps.Client(key=API_KEY)\n",
     "\n",
     "# Load business data\n",
@@ -146,14 +146,14 @@
     "import time\n",
     "\n",
     "\n",
-    "API_KEY = \"AIzaSyDI3JzygmgqkutG4VFjbzHSXvHP2-DfjwM\"\n",
+    "API_KEY = \"XXX\"\n",
     "gmaps = googlemaps.Client(key=API_KEY)\n",
     "\n",
     "# Load business data\n",
     "file_path = \"../../Cleaned Data/fullrestaurants.csv\"\n",
     "business_data = pd.read_csv(file_path)\n",
     "\n",
-    "# ✅ Function to search for a business\n",
+    "# Function to search for a business\n",
     "def get_business_info(name, lat, lon):\n",
     "    try:\n",
     "        # Search for places using name and a small radius\n",
@@ -178,7 +178,7 @@
     "        print(f\"Error fetching info for {name}: {e}\")\n",
     "        return None, \"ERROR\"\n",
     "\n",
-    "# ✅ Apply the function to all businesses\n",
+    "# Apply the function to all businesses\n",
     "business_data[\"Google Place ID\"] = None\n",
     "business_data[\"Business Status\"] = None\n",
     "\n",
@@ -190,11 +190,11 @@
     "    # Avoid hitting API rate limits\n",
     "    time.sleep(1)  # Wait 1 second per request\n",
     "\n",
-    "# ✅ Save the updated data\n",
+    "# Save the updated data\n",
     "output_file = \"fullrestaurants_with_google_status.csv\"\n",
     "business_data.to_csv(output_file, index=False)\n",
     "\n",
-    "print(f\"✅ Updated business data saved to: {output_file}\")\n"
+    "print(f\"Updated business data saved to: {output_file}\")\n"
    ]
   },
   {
@@ -283,7 +283,7 @@
     "import time\n",
     "from geopy.distance import geodesic\n",
     "\n",
-    "API_KEY = \"AIzaSyDI3JzygmgqkutG4VFjbzHSXvHP2-DfjwM\"\n",
+    "API_KEY = \"XXX\"\n",
     "gmaps = googlemaps.Client(key=API_KEY)\n",
     "\n",
     "# Load business data\n",
@@ -416,7 +416,7 @@
     "import time\n",
     "from geopy.distance import geodesic\n",
     "\n",
-    "API_KEY = \"AIzaSyDI3JzygmgqkutG4VFjbzHSXvHP2-DfjwM\"\n",
+    "API_KEY = \"XXX\"\n",
     "gmaps = googlemaps.Client(key=API_KEY)\n",
     "\n",
     "# Load business data\n",
