--- a/Data Preprocessing/Google Maps/POI_Extraction.ipynb
+++ b/Data Preprocessing/Google Maps/POI_Extraction.ipynb
@@ -1249,7 +1249,7 @@
     "import pandas as pd\n",
     "from geopy.distance import geodesic  \n",
     "\n",
-    "API_KEY = 'AIzaSyDNJHV8Q7OFcGJfieXInt2Y9JN6Gi2wDzk' # New API_KEY\n",
+    "API_KEY = 'XXX' # our API_KEY\n",
     "map_client = googlemaps.Client(API_KEY)\n",
     "\n",
     "# Input and output file paths\n",
@@ -2040,7 +2040,7 @@
     "import pandas as pd\n",
     "from geopy.distance import geodesic  \n",
     "\n",
-    "API_KEY = 'AIzaSyDNJHV8Q7OFcGJfieXInt2Y9JN6Gi2wDzk' # New API_KEY\n",
+    "API_KEY = 'XXX' # API_KEY\n",
     "map_client = googlemaps.Client(API_KEY)\n",
     "\n",
     "# Input and output file paths\n",
